Update readme and gitignore